--- a/style.css
+++ b/style.css
@@ -15,3 +15,14 @@
   display: flex;
 
 }
+
+#container-principal {
+  display: flex;
+
+}
+
+#evaluation-form {
+  display: flex;
+  width: 675px;
+  
+}
